update markdown files

--- a/01_프로젝트준비.md
+++ b/01_프로젝트준비.md
@@ -15,7 +15,7 @@ cd CardSpendingData
 ### Step 2. 가상환경 생성.
 ```bash
 # 1. 프로젝트 하위 폴더 생성.
-mkdir -p ./{data/{raw,processed,external},outputs/{charts,images,tables}}
+mkdir -p ./{data/{raw,processed,external},outputs/{charts,tables}}
 
 # 2. 가상환경 생성.
 python3 -m venv venv
@@ -54,7 +54,6 @@ tree -d -L 2
     │   └── raw
     ├── outputs
     │   ├── charts
-    │   ├── reports
     │   └── tables
     └── venv
         ├── bin
