update markdown files

--- a/03_탐색적데이터분석.md
+++ b/03_탐색적데이터분석.md
@@ -147,15 +147,15 @@ df.head()
 
 ![월별매출히트맵](outputs/charts/월별매출히트맵.png)
 
-전반적으로 1~2월은 매출이 상대적으로 적고 5~9월은 매출이 상대적으로 높다. 2022년에는 펜데믹의 영향으로 4월 이후 매출이 평이한 것으로 보인다. 특이한 점은 2023년 5월, 2025년 7월에 매출이 두드러지게 높다는 사실이다. 
+전반적으로 1 - 2월은 매출이 상대적으로 적고 5 - 9월은 매출이 상대적으로 높다. 2022년에는 펜데믹의 영향으로 4월 이후 매출이 평이한 것으로 보인다. 특이한 점은 2023년 5월, 2025년 7월에 매출이 두드러지게 높다는 사실이다. 
 
-2023년 5월은 엔데믹이 선언된 시기여서 그 여파로 소비가 일시적으로 증가했다는 점을 알 수 있다. 2025년 7~9월은 민생회복 소비쿠폰이 지급된 시기로 모든 국민이 소비쿠폰을 받은 시기인 7월에 일시적으로 소비가 증가했음을 짐작할 수 있다.
+2023년 5월은 엔데믹이 선언된 시기여서 그 여파로 소비가 일시적으로 증가했다는 점을 알 수 있다. 2025년 7 - 9월은 민생회복 소비쿠폰이 지급된 시기로 모든 국민이 소비쿠폰을 받은 시기인 7월에 일시적으로 소비가 증가했음을 짐작할 수 있다.
 
 ![요일별매출및건수](outputs/charts/요일별매출및건수.png)
 
-이 그래프를 보면 일요일 -> 금요일로 진행될 수록 점점 결제 건수와 매출액이 증가하는 모양이며 토요일이 되면 갑자기 줄어드는 모양을 하고 있다. 이것은 경기도 경제의 상당 부분을 차지하고 있는 수원시, 용인시, 화성시, 안산시 등의 공업 단지 위주의 경제 구조에 의한 것이다.
+이 그래프를 보면 일요일 -> 금요일로 진행될 수록 점점 결제 건수와 매출액이 증가하는 모양이며 토요일이 되면 갑자기 줄어드는 모양을 하고 있다. 이것은 경기도 경제의 상당 부분을 차지하고 있는 수원시, 용인시, 화성시, 안산시 등에 위치한 대기업의 본사(삼성), 반도체·IT, 중공업·자동차·부품 공장들 (편의상 뒤에서는 공업 단지라고 부르겠다.) 위주의 경제 구조에 의한 것이다.
 
-도시의 공단에서 일하는 노동자들에 의해 금요일 및 일요일 부근에 유동인구가 높을 것이라고 예측이 되며 이로 인해 토요일에 매출액 및 매출건수가 상대적으로 낮고 목요일, 금요일 부근에 매출액이 높을 것이라고 생각된다.
+도시에서 일하는 노동자들에 의해 금요일 및 일요일 부근에 유동인구가 높을 것이라고 예측이 되며 이로 인해 토요일에 매출액 및 매출건수가 상대적으로 낮고 목요일, 금요일 부근에 매출액이 높을 것이라고 생각된다.
 
 ![시간대별매출및건수](outputs/charts/시간대별매출및건수.png)
 
@@ -165,17 +165,17 @@ df.head()
 
 ![성별매출비중](outputs/charts/성별매출비중.png)
 
-경기도 경제의 상당 부분을 차지하고 있는 수원시, 용인시, 화성시, 안산시 등의 공업 단지 위주의 경제 구조에 의해서 상대적으로 남성 위주의 매출이 많이 발생한 것으로 보인다.
+직장인, 가족 단위 인구가 많은 경기도의 특성을 반영하고 있다. 가족 전체를 위한 소비를 수입이 높은 가장 명의의 카드로 결제하는 경우도 있고, 가족의 외식이나 직장의 회식비 결제가 남성의 카드 위주로 이루어질 가능성이 크다는 것도 짐작해 볼 수 있다.
 
 ![연령대별매출](outputs/charts/연령대별매출.png)
 
-30~50대의 노동자 및 직장인 (또는 주부)들이 경기도 상권의 주 고객층임을 알 수 있다. 특이하게 50~60대의 매출액도 낮지 않음을 볼 수 있는데 이는 경기도에 가천대, 용인대, 아주대 등의 종합 대학교가 다수 있기 때문임을 짐작할 수 있다.
+30 - 50대의 노동자 및 직장인 (또는 주부)들이 경기도 상권의 주 고객층임을 알 수 있다. 특이하게 50 - 60대의 매출액도 낮지 않음을 볼 수 있는데 이는 경기도에 가천대, 용인대, 아주대 등의 종합 대학교가 다수 있기 때문임을 짐작할 수 있다.
 
-대학생들은 경제력이 대체로 낮으므로 구매력이 높지 않다고 생각할 수 있고, 종합 대학교의 교직원이나 종합 병원 환자들에 의해 다른 연령대에 비해 50~60대의 매출액이 낮지 않게 나온다고 생각된다.
+대학생들은 경제력이 대체로 낮으므로 구매력이 높지 않다고 생각할 수 있고, 종합 대학교의 교직원이나 종합 병원 환자들에 의해 다른 연령대에 비해 50 - 60대의 매출액이 낮지 않게 나온다고 생각된다.
 
 ![연령성별객단가추이](outputs/charts/연령성별객단가추이.png)
 
-남성과 여성의 객단가는 크게 차이나지 않음을 알 수 있다.
+남성과 여성의 객단가 자체는 크게 차이나지 않음을 알 수 있다.
 
 ## Step 4. 카테고리 분석 결과
 
@@ -226,7 +226,7 @@ df.head()
 
 자동차의 객단가가 높은 것으로 상대적으로 고가인 자동차를 구매할 수 있는 중산층 가구가 많음을 알 수 있다. 
 
-차량판매의 객단가가 850000 정도인게 말이 되나 싶지만 차량판매 데이터는 차량 관련 서비스 및 유지보수 및 리스/할부를 통한 구매 등 모든 케이스를 포함하고 있기 때문에 해당 수치가 나왔다. 
+차량판매의 객단가가 850000 정도인게 말이 되나 싶지만 차량판매 데이터는 리스/할부를 통한 구매 등 모든 케이스를 포함하고 있기 때문에 해당 수치가 나올 수 있다. 
 
 또한, 이것은 추측이지만 경기도의 기업/공장에서 운용하는 법인 차량의 차량 수리비나 부품 대금 등의 건당 결제액이 850000일 수도 있다. 법인 카드는 건당 결제 한도가 정해져 있기 때문이다.
 
@@ -238,9 +238,95 @@ df.head()
 - D19 : 제조/도매
 - Q15 : 한식
 
-대부분 30~50대로 이루어져 있다. 30~50대가 가장 활발하게 경제활동을 하는 인구이며 자녀와 부모 모두를 부양하고 있는 부양의 주체가 되고 있음을 알 수 있다. 또한 경기도는 서울의 높은 집값을 피해 이주한 30~40대 부부와 자녀로 이루어진 핵가족이 대부분이므로 자연스러운 그래프이다.
+대부분 30 - 50대로 이루어져 있다. 30 - 50대가 가장 활발하게 경제활동을 하는 인구이며 자녀와 부모 모두를 부양하고 있는 부양의 주체가 되고 있음을 알 수 있다. 또한 경기도는 서울의 높은 집값을 피해 이주한 30 - 40대 부부와 자녀로 이루어진 핵가족이 대부분이므로 자연스러운 그래프이다.
 
 ## Step 5. 지역별 분석 결과
 
 ![지역별총매출](outputs/charts/지역별총매출.png)
 
+대규모 공업단지가 조성되어 있는 수원시, 용인시, 화성시 (그리고 안산시) 위주로 지역 경제가 활성화 되어 있다. 사람이 많이 몰리는 만큼 필연적으로 소비도 많이 나오게 됨을 알 수 있다.
+
+![주요지역별업종매출히트맵](outputs/charts/주요지역별업종매출히트맵.png)
+
+- D11 : 종합소매점
+- D19 : 제조/도매
+- F09 : 연료판매
+- Q15 : 한식
+- S03 : 일반병원
+
+의식주 및 생필품등을 종합소매점에서 구매하고 있음을 짐작할 수 있고 공업단지 이외에도 다수의 신도시들이 서울, 인천 및 경기도의 타 지역으로 광역 출퇴근을 하는 사람들의 배드타운이 되고 있음을 알 수 있다.
+
+![상위5개지역의연령대별매출비중](outputs/charts/상위5개지역의연령대별매출비중.png)
+
+대부분 30 - 50대로 이루어져 있다. 위에서도 말했다시피 30~50대가 가장 활발하게 경제활동을 하는 인구이고 자녀와 부모 모두를 부양하고 있는 부양의 주체가 되고 있다. 또한 경기도는 서울의 높은 집값을 피해 이주한 핵가족들이 다수이며 광역 출퇴근을 하는 사람들의 배드타운의 역할을 하고 있으므로 경기도의 지역 특성상 자연스러운 그래프이다.
+
+## Step 6. 복합 상관관계 분석 결과
+
+![요일및시간대별매출집중도](outputs/charts/요일및시간대별매출집중도.png)
+
+목 - 금요일, 점심 - 저녁 사이가 가장 매출이 집중되는 시기임을 알 수 있다. 월 - 목 사이에는 오후 - 저녁 사이의 매출이 두드러진다. 경기도의 기업, 반도체·IT R&D, 중공업·자동차·부품 공장 등에서 근무를 마친 대규모 근로자 집단이 밀집되는 시기일 것이라는 가정이면 아래와 같은 추측이 가능해진다.
+
+ - 목, 금 점심: 팀 회식, 송별·환영 모임, 외부 미팅
+
+ - 목, 금 저녁: 회식, 동료·지인과의 약속, 주말 장보기(대형마트, 종합소매점)
+  
+또한 광역 출퇴근을 하는 인윈이 많은 것으로 미루어 보아 아래와 같은 추측도 가능해진다.
+
+ - 퇴근 후 서울 도심지에서 1차 소비 후 경기도의 역세권 및 신도시 상권에서 2차 소비
+  
+이러한 추측이면 종합소매점과 한식이 높은 비중을 차지하는 이유도 충분히 설명이 될 수 있다. 평일 낮 소비가 강한 서울 중심 업무지구에 비해 경기도는 퇴근 이후에 주거지 인근 상권으로 소비가 집중되며 목, 금 점심 - 저녁에는 근로자들의 소비까지 겹쳐서 소비가 최대가 된다. 
+
+![연령대별시간대소비패턴비교](outputs/charts/연령대별시간대소비패턴비교.png)
+
+이 그래프는 이전의 설명을 뒷받침해 줄 수 있는 그래프이다. 그래프를 보면 30 - 60대 위주로 점심 - 저녁에 소비가 활발한 것을 알 수 있다. 경기도는 직장인, 가족 단위 인구가 지역 경제를 실질적으로 책임지고 있다.
+
+![도시별요일별매출규모](outputs/charts/도시별요일별매출규모.png)
+
+이 그래프 역시 이전의 설명을 뒷받침해 줄 수 있는 그래프이다. 도시에서 일하는 노동자들에 의해 금요일 및 일요일 부근에 유동인구가 높을 것이라고 예측이 되며 이로 인해 토요일에 매출액 및 매출건수가 상대적으로 낮고 목요일, 금요일 부근에 매출액이 높을 것이라고 생각된다.
+
+![업종별남성매출비중](outputs/charts/업종별남성매출비중.png)
+
+상위 매출 15개 업종에서 일반병원(S03), 의복/의류(D09)를 제외하고 모든 업종이 남성대상 매출이 많다. 이는 직장인, 가족 단위 인구가 많은 경기도의 특성을 반영하고 있다. 겉보기엔 남성이 쓴 것 같지만 가족 전체를 위한 소비를 수입이 높은 가장 명의의 카드로 결제하는 경우도 있다. 가족의 외식이나 직장의 회식비 결제가 남성의 카드 위주로 이루어질 가능성이 크다는 것도 짐작해 볼 수 있다. 또한 자녀 및 부모의 병원 방문이나 개인의 취향이 반영된 의복/의류는 대부분 여성이 소비결정권을 가지고 있음을 알 수 있다. 
+
+## Step 7. 결론
+
+### 1. 경기도의 정체성
+데이터는 경기도가 단순한 서울의 위성도시를 넘어, 자급자족 가능한 산업 생태계와 대규모 주거 기능이 결합된 복합 경제권임을 보여주고 있다. 
+
+ - 산업 도시: 수원(삼성), 화성/안산(제조/부품), 용인(반도체) 등 핵심 산업 도시들의 매출 규모가 압도적이며, 이는 평일(목/금) 점심~저녁 시간대의 폭발적인 소비 피크로 이어짐.
+  
+ - 베드타운: 종합소매점의 압도적인 결제 빈도와 일요일 매출 회복 패턴은 퇴근 후와 주말에 지역 상권에서 생활 소비를 해결하는 특성이 반영됨.
+  
+### 2. 광역 출퇴근을 하는 3050세대
+경기도 소비 시장을 움직이는 핵심 주체는 '자가용으로 출퇴근하며 가족을 부양하는 30~50대 남성 가장'으로 정의된다.
+
+ - 연료판매와 차량관리 업종의 높은 매출은 자가용이 경기도민의 생존 필수품임을 여실히 보여준다.
+
+ - 남성 카드의 높은 매출 비중은 가장이 가족 전체의 생활비를 결제하는 일종의 '대리인' 역할을 수행하고 있음을 시사한다. 이는 경기도는 가족 중심의 생활 패턴이 강함을 보여준다. 
+  
+ - 병원과 의류 소비에서 나타난 여성의 주도권은 가구 내 돌봄과 취향 소비의 결정권이 분리되어 있음을 보여준다.
+
+### 3. 실용·생존 그리고 효율
+화려한 과시적 소비보다는 삶을 유지하고 효율화하는 실용적 소비가 경기도의 특징이다. 최근에 YONO(You Only Need One) 트랜드와 가치 소비 트랜드가 대두되고 있는 것도 어느정도 영향이 있다. 고물가·고금리 시대에 외화 가격까지 증가하면서 보여지는 경제 지표는 좋아지고 있는 반면 서민들의 생활은 점점 어려워 지고 있다. 
+
+매출 상위 15개 업종 분석 결과, 백화점/명품/레저 등 과시적 소비재는 순위권 밖으로 밀려나고, 종합소매점(1위), 식료품(6위), 병원(3위) 등 생존 필수재가 상위권을 독식하고 있다. 이는 경기도민들이 경제적 불확실성에 대응하여 지출의 우선순위를 삶의 질에서 삶의 유지로 재조정했음을 보여준다.
+
+### 4. 밥보다 커피, 외식보다 편의점
+무조건 안 쓰는 것이 아니라 가성비를 극대화하거나 가심비(가격 대비 심리적 만족감)을 주는 특정 항목에는 아끼지 않는 선택과 집중 소비가 나타난다. 
+
+ - 가성비(편의점): 종합소매점의 압도적 1위는 런치플레이션의 단면을 보여주기도 한다.
+  
+ - 가심비(커피): 반면 커피/음료가 빈도 2위를 차지한 것은, 밥값은 아껴도 커피 한 잔의 여유라는 작은 사치는 포기하지 않는 현대인의 이중적인 소비 심리를 대변한다. 이는 YONO 트렌드 속에서도 나를 위한 최소한의 보상은 유지하려는 성향과 일치한다.
+  
+### 5. 시사점
+분석 결과를 바탕으로 경기도 상권 및 정책 수립, 마케팅 등에 있어 다음과 같은 방향성이 있을 것임을 짐작해본다.
+
+ - 골든타임 공략: 마케팅과 상권 전략은 직장인들의 지갑이 열리는 목·금요일 점심과 퇴근 직후에 화력이 집중되어야 한다.
+
+ - 가족 단위 타겟팅: 결제는 남성이 하더라도 실제 수혜자는 가족 전체인 경우가 많으므로, 가족의 편의와 건강을 소구점으로 하는 마케팅 전략이 대두될 것이다.
+
+ - 원스톱 생활 거점화: 장보기, 식사, 서비스를 한 곳에서 해결할 수 있는 복합 편의 상권이 많이 조성될 것이다.
+
+ - 생활비 절감 & 지속 가능성 지원: 경기도에서 곧 지역화폐 사용 시 추가 캐시백을 제공하는 것이 없어질 예정이라고 하는데 예산을 더 투입하는 등의 방안으로 이를 계속 유지할 것이다.
+
+ - 실패 없는 선택 제안 : 기본 기능의 우수성, 가성비 용량등을 강조한 마케팅이 많아질 것이며 디저트나 커피등의 작은 사치 상품을 미끼 상품으로 활용하는 마케팅이 많아질 것이다.
