--- a/01_프로젝트준비.md
+++ b/01_프로젝트준비.md
@@ -17,27 +17,35 @@ cd CardSpendingData
 # 1. 프로젝트 하위 폴더 생성.
 mkdir -p ./{data/{raw,processed,external},outputs/{charts,tables}}
 
-# 2. 가상환경 생성.
+# 2. git 설치
+sudo add-apt-repository ppa:git-core/ppa
+apt update 
+sudo apt install git 
+
+# 3. 가상환경 생성.
 python3 -m venv venv
 
-# 3. 가상환경 활성화.
+# 4. 가상환경 활성화.
 source venv/bin/activate
 ```
 
 ### Step 3. 패키지 설치
 ```bash
 # 1. pip 업그레이드
-pip install --upgrade pip
+(venv)$ pip install --upgrade pip
 
 # 2. 필수 패키지 설치
-pip install pandas numpy scipy matplotlib seaborn scikit-learn
+(venv)$ pip install pandas numpy scipy matplotlib seaborn scikit-learn
 
 # 3-1. Jupyter notebook 관련 패키지
 ## Visual Studio Code의 "Jupyter Extension Pack" 설치
-pip install jupyter jupyterlab ipython
+(venv)$ pip install jupyter jupyterlab ipython
 
 # 3-2. 한글 폰트 설정
-pip install fonts-nanum
+(venv)$ pip install fonts-nanum
+
+# 3-3. github 원격 저장소 연결
+git remote add origin https://github.com/davidots429/GyeonggiCard2025.git
 ```
 
 **생성된 디렉토리 구조**
